[package]
name = "tmf-cli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"]}
env_logger = "0.11.6"
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
tmf-client = "0.1.6"
# tmf-client = { git = "https://github.com/rruckley/tmf-client.git" }
tmflib = "0.1.27"
