[package]
name = "tmf-cli"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"]}
env_logger = "0.11.6"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
tmf-client = "0.1.9"
# tmf-client = { git = "https://github.com/rruckley/tmf-client.git" }
tmflib = "0.1.36"
